--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,66 +1,79 @@
 {
   "signup": {
-    "title": "Create an account",
-    "email": "Email address",
-    "password": "Password",
-    "submit": "Create my account",
-    "loading": "Creating account...",
-    "emailSent": "A confirmation email has been sent to you.",
-    "alreadyAccount": "Already have an account?",
-    "loginLink": "Log in here",
+    "title": "Créer un compte",
+    "email": "Adresse email",
+    "password": "Mot de passe",
+    "submit": "Créer mon compte",
+    "loading": "Création en cours...",
+    "emailSent": "Un email de confirmation vous a été envoyé.",
+    "alreadyAccount": "Vous avez déjà un compte ?",
+    "loginLink": "Connectez-vous ici",
     "errors": {
-      "email": "Invalid email address",
-      "password": "Password must be at least 8 characters long"
+      "email": "Adresse email invalide",
+      "password": "Le mot de passe doit contenir au moins 8 caractères"
     }
   },
   "onboarding": {
-    "title": "Welcome!",
-    "lastName": "Your last name",
-    "childrenTitle": "Add your children",
-    "childName": "Child's first name",
-    "addChild": "Add a child",
-    "removeChild": "Remove",
-    "save": "Continue"
+    "title": "Bienvenue !",
+    "lastName": "Votre nom de famille",
+    "childrenTitle": "Ajoutez vos enfants",
+    "childName": "Prénom de l'enfant",
+    "addChild": "Ajouter un enfant",
+    "removeChild": "Supprimer",
+    "save": "Continuer"
   },
   "dashboard": {
-    "title": "Dashboard",
-    "parentInfo": "Parent information",
-    "name": "Name",
+    "title": "Tableau de bord",
+    "parentInfo": "Informations du parent",
+    "name": "Nom",
     "email": "Email",
-    "language": "Language",
-    "unknown": "Unknown",
-    "childrenTitle": "My children",
-    "noChildren": "No children have been added yet.",
-    "level": "Level",
+    "language": "Langue",
+    "unknown": "Inconnue",
+    "childrenTitle": "Mes enfants",
+    "noChildren": "Aucun enfant n'a encore été ajouté.",
+    "level": "Niveau",
     "points": "Points",
-    "loading": "Loading..."
+    "loading": "Chargement..."
   },
   "about": {
-    "title": "About KidPoints",
-    "description": "KidPoints is an app designed to help families organize children's daily tasks in a fun and motivating way.",
-    "missionTitle": "Our mission",
-    "missionContent": "Encourage autonomy, responsibility, and teamwork in the family through a system of points and rewards.",
-    "featuresTitle": "Features",
+    "title": "À propos de KidPoints",
+    "description": "KidPoints est une application conçue pour aider les familles à organiser les tâches quotidiennes des enfants de manière ludique et motivante.",
+    "missionTitle": "Notre mission",
+    "missionContent": "Encourager l'autonomie, la responsabilisation et le travail d'équipe en famille grâce à un système de points et de récompenses.",
+    "featuresTitle": "Fonctionnalités",
     "features": {
-      "chores": "Custom task management",
-      "rewards": "Reward system",
-      "levels": "Levels and progression",
-      "family": "Multiple children and profiles"
+      "chores": "Gestion des tâches personnalisées",
+      "rewards": "Système de récompenses",
+      "levels": "Niveaux et progression",
+      "family": "Multi-enfants et multi-profils"
     }
   },
+  "parent": {
+    "profile": "Profil",
+    "children": "Enfants",
+    "tasks": "Tâches"
+  },
+  "form": {
+    "name": "Name",
+    "language": "Language",
+    "save": "Save",
+    "childName": "Child name",
+    "add": "Add",
+    "delete": "Delete"
+  },
   "colors": {
-    "red": "Red 🔴",
-    "blue": "Blue 🔵",
-    "green": "Green 🟢",
-    "yellow": "Yellow 🟡",
-    "purple": "Purple 🟣",
-    "pink": "Pink 🌸",
+    "red": "Rouge 🔴",
+    "blue": "Bleu 🔵",
+    "green": "Vert 🟢",
+    "yellow": "Jaune 🟡",
+    "purple": "Violet 🟣",
+    "pink": "Rose 🌸",
     "orange": "Orange 🟠",
-    "brown": "Brown 🟤",
-    "gray": "Gray ⚪"
+    "brown": "Marron 🟤",
+    "gray": "Gris ⚪"
   },
   "language": {
-    "fr": "French",
-    "en": "English"
+    "fr": "Français",
+    "en": "Anglais"
   }
 }
