--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -13,7 +13,7 @@
       "password": "Le mot de passe doit contenir au moins 8 caractères"
     }
   },
- "onboarding": {
+  "onboarding": {
     "title": "Bienvenue !",
     "lastName": "Votre nom de famille",
     "childrenTitle": "Ajoutez vos enfants",
@@ -47,6 +47,19 @@
       "levels": "Niveaux et progression",
       "family": "Multi-enfants et multi-profils"
     }
+  },
+  "parent": {
+    "profile": "Profil",
+    "children": "Enfants",
+    "tasks": "Tâches"
+  },
+  "form": {
+    "name": "Nom",
+    "language": "Langue",
+    "save": "Enregistrer",
+    "childName": "Nom de l'enfant",
+    "add": "Ajouter",
+    "delete": "Supprimer"
   },
   "colors": {
     "red": "Rouge 🔴",
